[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/models/StreetGreen.glb" type="PackedScene" id=1]
[ext_resource path="res://Game/models/StreetRed.glb" type="PackedScene" id=2]
[ext_resource path="res://Game/models/StreetYellow.glb" type="PackedScene" id=3]
[ext_resource path="res://Game/models/StreetBlue.glb" type="PackedScene" id=4]
[ext_resource path="res://Game/scripts/Street.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3.11575, 0.186572, 0.364468 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.737255, 0.968627, 1, 0.584314 )

[node name="Street" type="Spatial"]
script = ExtResource( 5 )

[node name="Area" type="Area" parent="."]
transform = Transform( 0.737, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="StreetGreen" parent="Area/CollisionShape" instance=ExtResource( 1 )]
visible = false

[node name="StreetRed" parent="Area/CollisionShape" instance=ExtResource( 2 )]
visible = false

[node name="StreetYellow" parent="Area/CollisionShape" instance=ExtResource( 3 )]
visible = false

[node name="StreetBlue" parent="Area/CollisionShape" instance=ExtResource( 4 )]
visible = false

[node name="Transparent" type="MeshInstance" parent="Area/CollisionShape"]
transform = Transform( 2.86285, 0, 0, 0, 0.183369, 0, 0, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )
